--- a/src/main/webapp/inward/inward_bill_intrim_estimate.xhtml
+++ b/src/main/webapp/inward/inward_bill_intrim_estimate.xhtml
@@ -52,10 +52,16 @@
                 </p:panel>
 
                 <p:panel header="Inward Payment Bill - Estimated Professional Fees" rendered="#{bhtSummeryController.patientEncounter ne null}">
-                    <div class="d-flex justify-content-end mx-4" >
-                        <p:commandButton ajax="false"  value="Refresh" class="ui-button-plain mx-1" style="float:right; margin-right: 10px" action="#{bhtSummeryController.createTablesWithEstimatedProfessionalFees()}"  />                        
-                        <p:commandButton ajax="false" value="To Settle Bill" class="ui-button-warning mx-1" style="float:right; margin-right: 10px" action="#{bhtSummeryController.toSettle()}"  />
-                        <p:commandButton ajax="false"  value="To Print Interim Bill" class="ui-button-success mx-1" action="#{bhtSummeryController.toPrintItrim()}"  />
+                    <div class="d-flex justify-content-end mx-4 my-2" >
+                        <p:commandButton ajax="false"  value="Refresh" class="ui-button-plain mx-1" 
+                                         icon="fa-solid fa-arrows-rotate"
+                                         style="float:right; margin-right: 10px" action="#{bhtSummeryController.createTablesWithEstimatedProfessionalFees()}"  />                        
+                        <p:commandButton ajax="false" value="Settle" icon="fa fa-check"
+                                         class="ui-button-success mx-1"
+                                         action="#{bhtSummeryController.toSettle()}"  />
+                        <p:commandButton ajax="false"  value="Print Bill"
+                                         icon="fas fa-print"
+                                         class="ui-button-help"  action="#{bhtSummeryController.toPrintItrim()}"  />
                         <p:commandButton 
                             ajax="false"
                             icon="fa fa-search"
@@ -78,87 +84,108 @@
                             />
                     </div>
 
-                    <h:panelGrid columns="3" class="my-2 w-100">
+                    <div class="row">
+                        <div class="col-md-4">
+                            <p:panel id="panSearch2" class="w-100">
+                                <f:facet name="header">
+                                    <h:outputText styleClass="fa fa-user-circle"/>
+                                    <p:outputLabel class="mx-2" value="Patient Details"/>
+                                </f:facet>
+                                <in:bhtDetail admission="#{bhtSummeryController.patientEncounter}"/>
+                            </p:panel>
+                        </div>
 
-                        <h:panelGroup id="panSearch2" class="mx-2">
-                            <in:bhtDetail admission="#{bhtSummeryController.patientEncounter}"/>
-                        </h:panelGroup>
+                        <div class="col-md-4">
+                            <h:panelGroup class="ml-2">
+                                <p:panel header="" id="tot" class="w-100">
+                                    <f:facet name="header">
+                                        <h:outputText styleClass="fas fa-chart-bar" />
+                                        <p:outputLabel value="Summary" class="mx-2"/>
+                                    </f:facet>
+                                    <h:panelGroup id="crd" style="display: #{bhtSummeryController.patientEncounter.paymentMethod eq 'Credit' ? 'block' : 'none'} ;min-width: 100%; ">
+                                        <credit:outputCredit  patientEncounter="#{bhtSummeryController.patientEncounter}"/>
+                                    </h:panelGroup>
 
-                        <h:panelGroup class="ml-2">
-                            <p:panel header="Summary" id="tot">
+                                    <h:panelGrid columns="2" >
+                                        <h:outputLabel  value="Total Charges : "  style="min-width: 100px;font-weight: bold;"/>
+                                        <h:outputLabel value="#{bhtSummeryController.grantTotal}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00"/>
+                                        </h:outputLabel>                               
+                                        <h:outputLabel value="Paid By Patient :  " style="min-width: 100px;font-weight: bold;"/>
+                                        <h:outputLabel value="#{bhtSummeryController.paid}" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00"/>
+                                        </h:outputLabel>
+                                        <h:outputLabel value="Due : " style="min-width: 100px;font-weight: bold;"
+                                                       rendered="#{bhtSummeryController.patientEncounter.paymentMethod ne 'Credit' 
+                                                                   and bhtSummeryController.due > 0 }" />
+                                        <h:outputLabel  value="#{bhtSummeryController.due}"
+                                                        rendered="#{bhtSummeryController.patientEncounter.paymentMethod ne 'Credit' 
+                                                                    and bhtSummeryController.due > 0 }" style="float: right;">
+                                            <f:convertNumber pattern="#,##0.00"/>
+                                        </h:outputLabel>
+                                    </h:panelGrid>
 
-                                <h:panelGroup id="crd" style="display: #{bhtSummeryController.patientEncounter.paymentMethod eq 'Credit' ? 'block' : 'none'} ;min-width: 100%; ">
-                                    <credit:outputCredit  patientEncounter="#{bhtSummeryController.patientEncounter}"/>
-                                </h:panelGroup>
+                                </p:panel>
+                                <p:panel id="dis" class="mt-2 ">
+                                    <f:facet name="header">
+                                        <h:outputText styleClass="fas fa-sign-out-alt" />
+                                        <p:outputLabel value="Discharge" class="mx-2"/>
+                                    </f:facet>
 
-                                <h:panelGrid columns="2" >
-                                    <h:outputLabel  value="Total Charges : "  style="min-width: 100px;font-weight: bold;"/>
-                                    <h:outputLabel value="#{bhtSummeryController.grantTotal}" style="float: right;">
-                                        <f:convertNumber pattern="#,##0.00"/>
-                                    </h:outputLabel>                               
-                                    <h:outputLabel value="Paid By Patient :  " style="min-width: 100px;font-weight: bold;"/>
-                                    <h:outputLabel value="#{bhtSummeryController.paid}" style="float: right;">
+                                    <h:panelGrid columns="2">
+                                        <p:outputLabel value="Discharge Time"/>
+                                        <p:calendar value="#{bhtSummeryController.date}"
+                                                    id="dischargeTimeStamp"
+                                                    pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  >                               
+                                            <!--<f:ajax execute="@this" render="sum tvPt tot" event="dateSelect" listener="#{bhtSummeryController.checkDate}" />-->
+                                        </p:calendar> 
+                                    </h:panelGrid>
+                                    <div class="d-flex justify-content-end my-2">
+                                        <p:commandButton 
+                                            ajax="false" 
+                                            style="float: right;"
+                                            value="Recalculate" 
+                                            action="#{bhtSummeryController.createTables()}"  />
+                                        <p:commandButton 
+                                            ajax="false" 
+                                            style="float: right;"
+                                            value="Disharge" 
+                                            class="mx-1 ui-button-info"
+                                            action="#{bhtSummeryController.discharge}"  />
+                                        <p:commandButton 
+                                            ajax="false" 
+                                            style="float: right;" 
+                                            value="Disharge Cancel" 
+                                            class="mx-1 ui-button-warning"
+                                            action="#{bhtSummeryController.dischargeCancel}"  />
+                                    </div>
+                                </p:panel>
+                            </h:panelGroup>
+                        </div>
+
+                        <div class="col-md-4">
+                            <p:dataTable id="sum" value="#{bhtSummeryController.chargeItemTotals}" 
+                                         style="max-width: 40%;" var="c" 
+                                         class="ml-4"
+                                         rowStyleClass="#{c.total !=0?'':'noDisplayRow' }"
+                                         scrollable="true" scrollHeight="250" scrollWidth="500"
+                                         >
+                                <f:facet name="header">
+                                    <h:outputText styleClass="fas fa-money-bill" />
+                                    <p:outputLabel value="Charges" class="mx-2"/>
+                                </f:facet>
+                                <p:column headerText="Charge Type" >
+                                    <h:outputLabel value="#{c.inwardChargeType.label}"/>
+                                </p:column>
+                                <p:column  style="text-align: right;" headerText="Total">
+                                    <h:outputLabel value="#{c.total}">
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
-                                    <h:outputLabel value="Due : " style="min-width: 100px;font-weight: bold;"
-                                                   rendered="#{bhtSummeryController.patientEncounter.paymentMethod ne 'Credit' 
-                                                               and bhtSummeryController.due > 0 }" />
-                                    <h:outputLabel  value="#{bhtSummeryController.due}"
-                                                    rendered="#{bhtSummeryController.patientEncounter.paymentMethod ne 'Credit' 
-                                                                and bhtSummeryController.due > 0 }" style="float: right;">
-                                        <f:convertNumber pattern="#,##0.00"/>
-                                    </h:outputLabel>
-                                </h:panelGrid>
+                                </p:column>
+                            </p:dataTable>
+                        </div>
+                    </div>
 
-                            </p:panel>
-                            <p:panel 
-                                id="dis" 
-                                header="Discharge">
-
-                                <h:panelGrid columns="2">
-                                    <p:outputLabel value="Discharge Time"/>
-                                    <p:calendar value="#{bhtSummeryController.date}"
-                                                id="dischargeTimeStamp"
-                                                pattern="#{sessionController.applicationPreference.longDateTimeFormat}"  >                               
-                                        <!--<f:ajax execute="@this" render="sum tvPt tot" event="dateSelect" listener="#{bhtSummeryController.checkDate}" />-->
-                                    </p:calendar> 
-                                    <p:commandButton 
-                                        ajax="false" 
-                                        style="float: right;"
-                                        value="Recalculate" 
-                                        action="#{bhtSummeryController.createTables()}"  />
-                                    <p:commandButton 
-                                        ajax="false" 
-                                        style="float: right;"
-                                        value="Disharge" 
-                                        action="#{bhtSummeryController.discharge}"  />
-                                    <p:commandButton 
-                                        ajax="false" 
-                                        style="float: right;" 
-                                        value="Disharge Cancel" 
-                                        action="#{bhtSummeryController.dischargeCancel}"  />
-                                </h:panelGrid>
-                            </p:panel>
-                        </h:panelGroup>
-
-                        <p:dataTable id="sum" value="#{bhtSummeryController.chargeItemTotals}" 
-                                     style="max-width: 40%;" var="c" 
-                                     class="ml-4"
-                                     rowStyleClass="#{c.total !=0?'':'noDisplayRow' }"
-                                     scrollable="true" scrollHeight="250" scrollWidth="500"
-                                     >
-
-                            <p:column headerText="Charge Type" >
-                                <h:outputLabel value="#{c.inwardChargeType.label}"/>
-                            </p:column>
-                            <p:column  style="text-align: right;" headerText="Total">
-                                <h:outputLabel value="#{c.total}">
-                                    <f:convertNumber pattern="#,##0.00"/>
-                                </h:outputLabel>
-                            </p:column>
-                        </p:dataTable>
-
-                    </h:panelGrid>
 
                     <p:panel class="mt-3">
                         <p:tabView  id="tvPt" style="min-height: 50%;"  >                     
