--- a/src/main/webapp/admin/pricing/manage_item_fees_bulk.xhtml
+++ b/src/main/webapp/admin/pricing/manage_item_fees_bulk.xhtml
@@ -18,7 +18,7 @@
                     </f:facet>
 
                     <h:panelGrid columns="1" styleClass="alignTop" >
-                        <h:panelGrid columns="4" >
+                        <h:panelGrid columns="5" >
                             <p:commandButton ajax="false" 
                                              value="Add Fees For Selected Items" action="#{itemController.createItemFessForItemsWithoutFee}" >
                             </p:commandButton>
@@ -31,15 +31,21 @@
                             </p:commandButton>
 
                             <p:commandButton 
-                                ajax="false" value="Refresh Items" action="#{itemController.refreshInvestigationsAndServices}" >
+                                ajax="false" value="Refresh Items" action="#{itemController.fetchItemFeeList()}" >
+                            </p:commandButton>
+
+                            <p:commandButton 
+                                ajax="false" class="ui-button-success" value="Download" action="#{itemController.refreshInvestigationsAndServices}" >
+                                <p:dataExporter target="tblExport" type="xlsx" fileName="item_fees_list" ></p:dataExporter>
+
                             </p:commandButton>
 
                         </h:panelGrid>
                         <p:panel >
-                            <p:dataTable  value="#{itemController.investigationsAndServices}" 
+                            <p:dataTable  value="#{itemController.itemFeesList}" 
+                                          id="tblExport"
                                           var="i"   
                                           rowKey="#{i.id}" 
-                                          selection="#{itemController.selectedList}" 
                                           rowIndexVar="s"
                                           rows="20"
                                           paginator="true"
@@ -50,15 +56,23 @@
                                 <p:column  selectionMode="multiple" style="width: 10px;">                            
                                 </p:column>
 
-                                <p:column   sortBy="#{i.name}" width="200"
+                                <p:column   sortBy="#{i.id}" width="80"
+                                            filterMatchMode="contains" filterBy="#{i.name}" >  
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Item Id" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.id}"/>
+                                </p:column>
+
+                                <p:column   sortBy="#{i.name}" width="80"
                                             filterMatchMode="contains" filterBy="#{i.name}" >  
                                     <f:facet name="header">
                                         <h:outputLabel value="Item Name" />
                                     </f:facet>
-                                    <h:outputLabel value="#{i.name}"/>
+                                    <h:outputLabel value="#{i.item.name}"/>
                                 </p:column>
 
-                                <p:column sortBy="#{i.institution.name}" width="200"
+                                <p:column sortBy="#{i.institution.name}" width="100"
                                           filterMatchMode="contains" filterBy="#{i.institution.name}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Institution" />
@@ -66,13 +80,22 @@
                                     <h:outputLabel value="#{i.institution.name}" ></h:outputLabel>
                                 </p:column>
 
-                                <p:column sortBy="#{i.department.name}" width="120"
+                                <p:column sortBy="#{i.department.name}" width="50"
                                           filterMatchMode="contains" filterBy="#{i.department.name}">
                                     <f:facet name="header">
                                         <h:outputLabel value="Department" />
                                     </f:facet>
                                     <h:outputLabel value="#{i.department.name}" ></h:outputLabel>
                                 </p:column>
+
+                                <p:column sortBy="#{i.staff.name}" width="120"
+                                          filterMatchMode="contains" filterBy="#{i.staff.name}">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Staff" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.staff.name}" ></h:outputLabel>
+                                </p:column>
+
                                 <p:column sortBy="#{i.dblValue}" width="80"
                                           filterMatchMode="contains" filterBy="#{i.dblValue}">
                                     <f:facet name="header">
@@ -80,52 +103,38 @@
 
                                         </h:outputLabel>
                                     </f:facet>
-                                    <h:outputLabel value="#{i.total}" >
+                                    <h:outputLabel value="#{i.item.total}" >
                                         <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
                                     </h:outputLabel>
                                 </p:column>
-                                <p:column style="text-align: right;">
+
+                                <p:column sortBy="#{i.dblValue}" width="80"
+                                          filterMatchMode="contains" filterBy="#{i.dblValue}">
                                     <f:facet name="header">
-                                        <h:outputLabel value="Fees" />
+                                        <h:outputLabel value="Forigner Fee" >
+
+                                        </h:outputLabel>
                                     </f:facet>
-
-                                    <p:dataTable  value="#{i.itemFeesActive}" var="itfe" >
-                                        <p:column headerText="Name">
-                                            <p:outputLabel value="#{itfe.name}" ></p:outputLabel>
-                                        </p:column>
-                                        <p:column headerText="Type">
-                                            <p:outputLabel value="#{itfe.feeType}" ></p:outputLabel>
-                                        </p:column>
-                                        <p:column headerText="Discount">
-                                            <p:outputLabel value="#{itfe.discountAllowed?'Allowed':'Not Allowed'}" ></p:outputLabel>
-                                        </p:column>
-                                        <p:column headerText="Fee">
-                                            <p:outputLabel value="#{itfe.fee}" >
-                                                <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
-                                            </p:outputLabel>
-                                        </p:column>
-                                        <p:column headerText="Foreigner">
-                                            <p:outputLabel value="#{itfe.ffee}" >
-                                                <f:convertNumber pattern="#,##0.00" ></f:convertNumber>  
-                                            </p:outputLabel>
-                                        </p:column>
-                                    </p:dataTable>
-
-
+                                    <h:outputLabel value="#{i.item.totalForForeigner}" >
+                                        <f:convertNumber pattern="#,##0.00" ></f:convertNumber>
+                                    </h:outputLabel>
                                 </p:column>
-
+                                
+                                <p:column sortBy="#{i.feeType.label}" width="120"
+                                          filterMatchMode="contains" filterBy="#{i.staff.name}">
+                                    <f:facet name="header">
+                                        <h:outputLabel value="Item Fee type" />
+                                    </f:facet>
+                                    <h:outputLabel value="#{i.feeType.label}" ></h:outputLabel>
+                                </p:column>
                                 <p:column headerText="Actions" width="60">
-                                    <p:commandButton ajax="false" value="Edit" action="${itemFeeManager.toManageItemFees()}"  actionListener="#{viewController.makeBulkFeesAsPreviousPage()}">
+                                    <p:commandButton ajax="false" value="Edit" action="#{itemFeeManager.toManageItemFees()}"  actionListener="#{viewController.makeBulkFeesAsPreviousPage()}">
                                         <f:setPropertyActionListener value="#{i}" target="#{itemFeeManager.item}" ></f:setPropertyActionListener>
                                     </p:commandButton>
                                 </p:column>
 
                             </p:dataTable>
                         </p:panel>
-
-
-
-
                     </h:panelGrid>
 
                 </p:panel>
